# website

./: .cpanel.yml  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  footer.css  index.html  main.html  readme.md  styles.css
blog/: index.html
blog/assets/: blog_post_styles.css  blog_styles.css  styles.css
blog/posts/: template.html
blog/posts/2022/december/23/en/: workout_routine.html
blog/posts/2023/july/: handwired-corne_en.html
contact/: index.html
contact/assets/: contact_styles.css
public/: index.html
public/assets/: styles.css
public_html/: index.html
public_html/assets/: general_styles.css  styles.css
resume/: index.html
resume/assets/: resume_styles.css
src/: handlers.rs  main.rs  main.rs.bak  routers.rs  templates.rs
static/: blog.html  contact.html  index.html  wallets.html
static/assets/styles/: blog.css  blog_post.css  footer.css  index.css
static/blog/: index.html
static/blog/assets/: blog_post_styles.css
static/blog/posts/2023/7/: handwired-corne_en.html
static/blog/posts/2023/july/: handwired-corne_en.html
static/blog/posts/2024/2/: test.bpd
static/blog_posts/: bak_handwired-corne_en.html
static/blog_posts/2023/7/: handwired-corne.bpd
static/blog_posts/2024/12/: sabbatical.bpd
static/blog_posts/2024/2/: test.bpd
static/styles/: blog.css  contact.css
templates/: blog_post_template.html  blog_posts_list_template.html  blog_posts_page_template.html  footer.html
