[package]
name = "daffy-website"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.12.1" }
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
